navigation added' git status ls

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title>
+    <link rel="stylesheet" href="/css/variables.css">
 </head>
 <body>
     <header>
-        <!-- RE - Nawigacja w obrębie sstrony -->
+        <nav>
+            <img class="logo" alt="logo">
+            <a href="">object 1</a>
+            <a href="">object 2</a>
+            <a href="">object 2</a>
+            <a href="">object 4</a>
+        </nav>
     </header>
 
     <section>
