--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- RE - identyfikacja wizualna produktu w pliku css/variables -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +13,11 @@
     <header>
         <nav>
             <img class="logo" alt="logo">
-            <a href="">object 1</a>
-            <a href="">object 2</a>
-            <a href="">object 2</a>
-            <a href="">object 4</a>
-        </nav>
+            <a href="profile.html">Mój Profil</a>
+            <a href="contact.html">Skontaktuj Się Z Nami</a>
+            <a href="index.html">Home</a>
+            <a href="planStroll.html">Zaplanuj Przechadzkę</a>
+        </nav> 
     </header>
 
     <section>
