--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="hero.css">
     <title>crossRoads</title>
 </head>
 <body>
@@ -13,9 +14,20 @@
         <!-- RE - Nawigacja w obrębie sstrony -->
     </header>
 
+    
+    <div id="hero">
     <section>
-        <!-- RE - Sekcja Hero -->
+        <img src="las.jpg" alt="Przejdź się" height="400" width="1200" class="heroimage">
+        <div class="img__text">PRZECHADZKA</div>
+    <div class="features">  
+        <p>Ty wybierasz czas i miejsce</p>
+        <p>My planujemy resztę</p>
+    <div> 
+
+        <h1>Zaplanuj ją już teraz</h1>
+
     </section>
+    </div>
 
     <section>
         <!-- RE - Spis planowanych funkcji produktu -->
