Added new functionalities

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title>
+    <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -19,6 +21,13 @@
 
     <section>
         <!-- RE - Spis planowanych funkcji produktu -->
+        <ul id="functionalities">
+            <li class="functionalities"><i class="fas fa-map-signs fa-border fa-pulse"></i> Planuj</li>
+            <li class="functionalities"><i class="fas fa-walking fa-border"></i> Spaceruj</li>
+            <li class="functionalities"><i class="fas fa-tablet-alt fa-border"></i> Obserwuj</li>
+            <li class="functionalities"><i class="fas fa-keyboard fa-border"></i> Komentuj</li>
+        </ul>
+
     </section>
 
     <section>
