--- a/premiera.html
+++ b/premiera.html
@@ -11,12 +11,16 @@
     <section class="premier-section">
         <!-- RE - Zapis na premierę -->
         <h3>Chcesz zostać powiadomiony gdy aplikacja już wyjdzie?</h3>
-        <form action="" method="get"> 
-            <input type="email" name="email" placeholder="twoj@email.com" required>
-            <input type="button" value="Wyślij">
-        </form>
-        <p>Nienawidzimy spamu i wyślemy ci tylko maila z powiadomieniem, że aplikacja jest dostępna.</p>
-        <p>Nad bezpieczeństwem danych czuwa nasz nadworny terminator.</p>
+        <div class="premier-section_form">
+            <form action="" method="get"> 
+                <input type="email" name="email" placeholder="twoj@email.com" required>
+                <input type="button" value="Wyślij">
+            </form>
+            <div class="container">
+                <p>Nienawidzimy spamu i wyślemy ci tylko maila z powiadomieniem, że aplikacja jest dostępna.</p>
+                <p>Gwarantujemy bezpieczeństwo danych.</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
