--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title>
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/variables.css">
 </head>
+
 <body>
     <header>
         <!-- RE - Nawigacja w obrębie sstrony -->
@@ -18,14 +20,14 @@
     <section>
         <!-- RE - Sekcja Hero -->
     </section>
+    <!-- RE - Spis planowanych funkcji produktu -->
+    <section id="functionalities">
 
-    <section>
-        <!-- RE - Spis planowanych funkcji produktu -->
-        <ul id="functionalities">
-            <li class="functionalities"><i class="fas fa-map-signs fa-border fa-pulse"></i> Planuj</li>
-            <li class="functionalities"><i class="fas fa-walking fa-border"></i> Spaceruj</li>
-            <li class="functionalities"><i class="fas fa-tablet-alt fa-border"></i> Obserwuj</li>
-            <li class="functionalities"><i class="fas fa-keyboard fa-border"></i> Komentuj</li>
+        <ul class="section__functionalities">
+            <li class="ul__functionalities"><i class="fas fa-map-signs fa-border"></i> Planuj</li>
+            <li class="ul__functionalities"><i class="fas fa-walking fa-border"></i> Spaceruj</li>
+            <li class="ul__functionalities"><i class="fas fa-tablet-alt fa-border"></i> Obserwuj</li>
+            <li class="ul__functionalities"><i class="fas fa-keyboard fa-border"></i> Komentuj</li>
         </ul>
 
     </section>
@@ -44,4 +46,5 @@
 
 
 </body>
+
 </html>
