Mobile version styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>Chcesz zostać powiadomiony gdy aplikacja już wyjdzie?</h3>
             <div class="premier-section_form">
                 <form action="" method="get"> 
-                    <input type="email" name="email" placeholder="twoj@email.com" required>
+                    <input class="premier-section_email" type="email" name="email" placeholder="twoj@email.com" required>
                     <input class="premier-section_button" type="button" value="Wyślij">
                 </form>
                 <div class="premier-section_text">
