--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <section id="functionalities">
 
         <ul class="section__functionalities">
-            <li class="ul__functionalities"><i class="fas fa-map-signs fa-border"></i> Planuj</li>
-            <li class="ul__functionalities"><i class="fas fa-walking fa-border"></i> Spaceruj</li>
-            <li class="ul__functionalities"><i class="fas fa-tablet-alt fa-border"></i> Obserwuj</li>
-            <li class="ul__functionalities"><i class="fas fa-keyboard fa-border"></i> Komentuj</li>
+            <li class="ul__functionalities"><i class="fas fa-map-signs fa-border fa-2x"></i><div>Planuj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-walking fa-border fa-2x"></i><div>Spaceruj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-tablet-alt fa-border fa-2x"></i><div>Obserwuj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-keyboard fa-border fa-2x"></i><div>Komentuj</div></li>
         </ul>
 
     </section>
