--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- RE - Dodatkowe informacje o produkcie  -->
         </section>
     
-        <section class="premier-section">
+        <section id="premier-section" class="premier-section">
             <!-- RE - Zapis na premierę -->
             <h3>Chcesz zostać powiadomiony gdy aplikacja już wyjdzie?</h3>
             <div class="premier-section_form">
