--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <!-- RE - Dodatkowe informacje o produkcie  -->
         </section>
     
-        <section id="premier-section" class="premier-section">
+        <section id="contact-section">
             <!-- RE - Zapis na premierę -->
-            <h3>Chcesz zostać powiadomiony gdy aplikacja już wyjdzie?</h3>
-            <div class="premier-section_form">
+            <h2>Chcesz zostać powiadomiony, gdy aplikacja już wyjdzie?</h2>
+            <div class="contact-section_container">
                 <form action="" method="get"> 
-                    <input class="premier-section_email" type="email" name="email" placeholder="twoj@email.com" required>
-                    <input class="premier-section_button" type="button" value="Wyślij">
+                    <input class="contact-section_email" type="email" name="email" placeholder="twoj@email.com" required>
+                    <input class="contact-section_button" type="button" value="Wyślij">
                 </form>
-                <div class="premier-section_text">
+                <div class="contact-section_text">
                     <p>Nienawidzimy spamu i wyślemy ci tylko maila z powiadomieniem, że aplikacja jest dostępna.</p>
-                    <p>Gwarantujemy bezpieczeństwo danych.</p>
+                    <p>Zapewniamy bezpieczeństwo danych.</p>
                 </div>
             </div>
         </section>
