index.html modified

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="hero.css">
     <title>crossRoads</title>
+
 </head>
 <body>
     <header>
@@ -33,7 +34,7 @@
             <p style="border-bottom: 1px solid black;">Na podstawie podanych przez Ciebie informacji 
                 aplikacja dobierze trasę dzięki której możesz cieszyć się relaksującym spacerem
             </p>
-        <h1>Zaplanuj ją już teraz</h1>
+        <h1<a href="index.html#contact-section"></h1>>Zaplanuj ją już teraz</a></h1>
     </div>
     <div> 
 
