index and css modified

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p style="border-bottom: 1px solid black;">Na podstawie podanych przez Ciebie informacji 
                 aplikacja dobierze trasę dzięki której możesz cieszyć się relaksującym spacerem
             </p>
-        <h1<a href="index.html#contact-section"></h1>>Zaplanuj ją już teraz</a></h1>
+        <h1><a href="index.html#contact-section">Zaplanuj ją już teraz</a></h1>
     </div>
     <div> 
 
