--- a/index.html
+++ b/index.html
@@ -2,23 +2,29 @@
 
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title>
-    <link rel="stylesheet" href="/css/variables.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <img class="logo" alt="logo">
-            <a href="profile.html">Mój Profil</a>
-            <a href="contact.html">Skontaktuj Się Z Nami</a>
-            <a href="index.html">Home</a>
-            <a href="planStroll.html">Zaplanuj Przechadzkę</a>
-        </nav> 
-    </header>
+
+    <nav class="navigation">
+        <img src="Pak State.png" class="logo" alt="logo" width="40px">
+        <ul>
+            <li class="menu"><a  href="#" class="nav">Home</a></li>
+            <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
+            <li class="menu"><a href="#" class="nav">Zaplanuj Przechadzkę</a></li>
+            <li class="menu"><a href="#contact-section" class="nav">Skontaktuj Się Z Nami</a></li>
+            
+        </ul>
+    </nav>
+
+
 
     <section>
         <!-- RE - Sekcja Hero -->
@@ -42,4 +48,5 @@
 
 
 </body>
+
 </html>
