--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title> 
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/variables.css">
+   
 </head>
 
 <body>
     <nav class="navigation">
         <img src="Pak State.png" class="logo" alt="logo" width="40px">
-        <ul>
+        <ul class="position">
             <li class="menu"><a  href="#" class="nav">Home</a></li>
             <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
             <li class="menu"><a href="#" class="nav">Zaplanuj Przechadzkę</a></li>
