Added section about us

--- a/index.html
+++ b/index.html
@@ -53,10 +53,47 @@
                 <p>Zapewniamy bezpieczeństwo danych.</p>
             </div>
         </div>
-    </section>
+    </section id="about__us">
+        <div class="about__us--heading">
+            <h1>NASZ ZESPÓŁ:</h1>
+        </div>
+        <div class="photos">
+            <div class="p1">
+                <img src="IMG-5058.JPG" alt="photo Paulina"><br>Paulina Złomkowska
+                <br> 
+                <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
+                <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
+                <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
+            </div>
+            <div class="p2">
+                <img src="IMG-5058.JPG" alt="photo Piotr"><br>Piotr Kielak
+                <br>
+                <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
+                <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
+                <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>               
+            </div>
+            <div class="p3">
+                <img src="IMG-5058.JPG" alt="photo Robert"><br>Robert Rosa
+                <br>
+                <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
+                <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
+                <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
+            </div>
+            <div class="p4">
+                <img src="IMG-5058.JPG" alt="photo Paweł"><br>Paweł Politowski
+                <br>
+                <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
+                <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
+                <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
+            </div>
+        </div>
 
     <section>
-        <!-- RE - informacje o zespole -->
+       
     </section>
 
 
