Modified index.html and variables.css

--- a/index.html
+++ b/index.html
@@ -59,32 +59,32 @@
         </div>
         <div class="photos">
             <div class="p1">
-                <img src="IMG-5058.JPG" alt="photo Paulina"><br>Paulina Złomkowska
-                <br> 
+                <img src="IMG-5058.JPG" alt="photo Paulina">
+                <p class="p1_paragraph">Paulina Złomkowska</p>
                 <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
                 <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
                 <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
                 <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
             </div>
             <div class="p2">
-                <img src="IMG-5058.JPG" alt="photo Piotr"><br>Piotr Kielak
-                <br>
+                <img src="IMG-5058.JPG" alt="photo Piotr">
+                <p class="p2_paragraph">Piotr Kielak</p>
                 <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
                 <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
                 <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
                 <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>               
             </div>
             <div class="p3">
-                <img src="IMG-5058.JPG" alt="photo Robert"><br>Robert Rosa
-                <br>
+                <img src="IMG-5058.JPG" alt="photo Robert">
+                <p class="p3_paragraph">Robert Rosa</p>
                 <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
                 <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
                 <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
                 <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
             </div>
             <div class="p4">
-                <img src="IMG-5058.JPG" alt="photo Paweł"><br>Paweł Politowski
-                <br>
+                <img src="IMG-5058.JPG" alt="photo Paweł">
+                <p class="p4_paragraph">Paweł Politowski</p>
                 <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
                 <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
                 <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B"></i></a>
