--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <section id="functionalities">
 
         <ul class="section__functionalities">
-            <li class="ul__functionalities"><i class="fas fa-map-signs fa-border fa-2x"></i><div>Planuj</div></li>
-            <li class="ul__functionalities"><i class="fas fa-walking fa-border fa-2x"></i><div>Spaceruj</div></li>
-            <li class="ul__functionalities"><i class="fas fa-tablet-alt fa-border fa-2x"></i><div>Obserwuj</div></li>
-            <li class="ul__functionalities"><i class="fas fa-keyboard fa-border fa-2x"></i><div>Komentuj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-map-signs fa-border fa-2x"></i><div class="description">Planuj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-walking fa-border fa-2x"></i><div class="description">Spaceruj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-tablet-alt fa-border fa-2x"></i><div class="description">Obserwuj</div></li>
+            <li class="ul__functionalities"><i class="fas fa-keyboard fa-border fa-2x"></i><div class="description">Komentuj</div></li>
         </ul>
 
     </section>
