--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title> 
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/normalize.css">
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/variables2.css">
     <link rel="stylesheet" href="css/style.css">
