hero and index modified

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
         <div id="hero">
 
-            <img src="las.jpg" alt="Przejdź się" class="hero__image">
+            <!-- <img src="las.jpg" alt="Przejdź się" class="hero__image"> -->
 
 <div class="hero__header">
 
