Basic structure of section-extra added

--- a/index.html
+++ b/index.html
@@ -42,8 +42,40 @@
 
     </section>
 
-    <section>
+    <section class="section-extra">
         <!-- RE - Dodatkowe informacje o produkcie  -->
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
+        <div class="section-extra_funcionality">
+            <i class="fas fa-map-signs fa-border fa-2x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+        </div>
     </section>
 
     <section id="contact-section">
