--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title> 
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/variables2.css">
-    <link rel="stylesheet" href="css/style.css">
     
+    <link rel="stylesheet" href="css/main.css">
+  
    
 </head>
 
@@ -22,6 +19,7 @@
         <ul class="position">
             <li class="menu"><a  href="#" class="nav">Home</a></li>
             <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
+            <li class="menu"><a href="#about__us" class="nav">O Nas</a></li>
             <li class="menu"><a href="#" class="nav">Zaplanuj Przechadzkę</a></li>
             <li class="menu"><a href="#contact-section" class="nav">Skontaktuj Się Z Nami</a></li>
         </ul>
