Added photos to about us section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div class="photos">
         <div class="p1">
-            <img src="IMG-5058.JPG" alt="photo Paulina">
+            <img src="/photo/PZ.jpg" alt="photo Paulina">
             <p class="p1_paragraph">Paulina Złomkowska</p>
             <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
             <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
@@ -80,7 +80,7 @@
             <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
         </div>
         <div class="p2">
-            <img src="IMG-5058.JPG" alt="photo Piotr">
+            <img src="/photo/PK.jpeg" alt="photo Piotr">
             <p class="p2_paragraph">Piotr Kielak</p>
             <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
             <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
@@ -88,7 +88,7 @@
             <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
         </div>
         <div class="p3">
-            <img src="IMG-5058.JPG" alt="photo Robert">
+            <img src="/photo/RR.jpeg" alt="photo Robert">
             <p class="p3_paragraph">Robert Rosa</p>
             <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
             <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
@@ -96,7 +96,7 @@
             <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B"></i></a>
         </div>
         <div class="p4">
-            <img src="IMG-5058.JPG" alt="photo Paweł">
+            <img src="/photo/PP.jpg" alt="photo Paweł">
             <p class="p4_paragraph">Paweł Politowski</p>
             <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998"></i></a>
             <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8"></i></a>
