--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/variables2.css">
   
    
 </head>
