--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 <p>Zapewniamy bezpieczeństwo danych.</p>
             </div>
         </div>
-    </section id="about__us">
+    </section >
+    <section id="about__us">
     <div class="about__us--heading">
         <h1>NASZ ZESPÓŁ:</h1>
     </div>
@@ -108,7 +109,7 @@
         </div>
     </div>
 
-    <section>
+ 
 
     </section>
 
