css dziala w 1 pliku

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/variables2.css">
-  
+   
    
 </head>
 
@@ -77,7 +76,7 @@
     <div class="photos">
         <div class="p1">
             <img src="/photo/PZ.jpg" alt="photo Paulina">
-            <p class="p1_paragraph">Paulina Złomkowska</p>
+            <p class="p1_paragraph">Paulina Ziomkowska</p>
             <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998" target="_blank"></i></a>
             <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8" target="_blank"></i></a>
             <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B" target="_blank"></i></a>
