--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
         <!-- RE - Dodatkowe informacje o produkcie  -->
         <div class="section-extra_column1">
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-plus fa-5x"></i>
+                <p>Tworzysz własny profil w którym ustawiasz jaką masz kondycję fizyczną lub jeżeli wiesz, to z jaką prędkością spacerujesz.</p>
             </div>
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-map-marker-alt fa-5x"></i>
+                <p>Poznawaj nowe miejsca bez pośpiechu, dzięki dobraniu odpowiedniej trasy w zależności od posiadanego czasu.</p>
             </div>
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-map-marked-alt fa-5x"></i>
+                <p>Dobrane zostaną trasy, które są najbliżej Ciebie.</p>
             </div>
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-spinner fa-5x"></i>
+                <p>Dowiedz się, jak daleko jesteś aktualnie na trasie.</p>
             </div>
         </div>
         <div class="section-extra_column2">
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-save fa-5x"></i>
+                <p>Rejestruj pokonane przez Ciebie nowe trasy i zapisuj je do swojej kolekcji.</p>
             </div>
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-share-alt fa-5x"></i>
+                <p>Dziel się trasami i osiągnięciami ze znajomymi...</p>
             </div>
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-comments fa-5x"></i>
+                <p>... je komentuj</p>
             </div>
             <div class="section-extra_funcionality">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, tempore quae rem maxime voluptas, nulla voluptatum esse corrupti ratione odio ab perferendis. Mollitia ullam saepe pariatur voluptates, blanditiis ab deleniti.</p>
+                <i class="fas fa-question fa-5x"></i>
+                <p>Coś jeszcze?</p>
             </div>
         </div>
     </section>
