--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <!-- RE - Dodatkowe informacje o produkcie  -->
             <div class="section-extra_funcionality section-extra_funcionality-1">
                 <i class="fas fa-plus fa-5x"></i>
-                <p>Tworzysz własny profil w którym ustawiasz jaką masz kondycję fizyczną lub jeżeli wiesz, to z jaką prędkością spacerujesz.</p>
+                <p>Tworzysz własny profil w którym ustawiasz jaką masz kondycję fizyczną lub jeśli wiesz, wybierasz śrędnią prędkość odpowiednią dla siebie.</p>
             </div>
             <div class="section-extra_funcionality section-extra_funcionality-2">
                 <i class="fas fa-map-marker-alt fa-5x"></i>
-                <p>Poznawaj nowe miejsca bez pośpiechu, dzięki dobraniu odpowiedniej trasy w zależności od posiadanego czasu.</p>
+                <p>Poznawaj nowe miejsca bez pośpiechu, dzięki dobraniu odpowiedniej trasy zależnej od czasu, którym dysponujesz.</p>
             </div>
             <div class="section-extra_funcionality section-extra_funcionality-3">
                 <i class="fas fa-map-marked-alt fa-5x"></i>
@@ -69,7 +69,6 @@
                 <i class="fas fa-spinner fa-5x"></i>
                 <p>Dowiedz się, jak daleko jesteś aktualnie na trasie.</p>
             </div>
-        
             <div class="section-extra_funcionality section-extra_funcionality-5">
                 <i class="fas fa-save fa-5x"></i>
                 <p>Rejestruj pokonane przez Ciebie nowe trasy i zapisuj je do swojej kolekcji.</p>
@@ -81,10 +80,6 @@
             <div class="section-extra_funcionality section-extra_funcionality-7">
                 <i class="fas fa-comments fa-5x"></i>
                 <p>... je komentuj</p>
-            </div>
-            <div class="section-extra_funcionality section-extra_funcionality-8">
-                <i class="fas fa-question fa-5x"></i>
-                <p>Coś jeszcze?</p>
             </div>
     </section>
 
