hero.css and las.jpg replaced

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <!-- <img src="las.jpg" alt="Przejdź się" class="hero__image"> -->
 
 <div class="hero__header">
+    
 
             <div class="hero__top">
 
@@ -59,7 +60,7 @@
                 </div>
 
                 <div class="bottom__header2">
-                    <h1><a href="index.html#contact-section">Zaplanuj ją już teraz</a></h1>
+                    <h1><a href="index.html#contact-section">Zaplanuj ją już teraz!</a></h1>
                 </div>
 
             </div> <!---->
