Added footer and borders

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
 
             </div> <!---->
         </div>
-
-        </div>
-         
+        </div>       
 
     </section>
     <!-- RE - Spis planowanych funkcji produktu -->
@@ -90,7 +88,6 @@
                 <div class="description">Komentuj</div>
             </li>
         </ul>
-
     </section>
 
     <section class="section-extra">
@@ -139,6 +136,7 @@
             </div>
         </div>
     </section >
+
     <section id="about__us">
     <div class="about__us--heading">
         <h1>NASZ ZESPÓŁ:</h1>
@@ -147,40 +145,38 @@
         <div class="p1">
             <img src="/photo/PZ.jpg" alt="photo Paulina">
             <p class="p1_paragraph">Paulina Ziomkowska</p>
-            <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998" target="_blank"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B" target="_blank"></i></a>
+            <a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+            <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
         <div class="p2">
             <img src="/photo/PK.jpeg" alt="photo Piotr">
             <p class="p2_paragraph">Piotr Kielak</p>
-            <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998" target="_blank"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B" target="_blank"></i></a>
+            <a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+            <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
         <div class="p3">
             <img src="/photo/RR.jpeg" alt="photo Robert">
             <p class="p3_paragraph">Robert Rosa</p>
-            <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998" target="_blank"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B" target="_blank"></i></a>
+            <a href="https://github.com/Sossna" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+            <a href="https://www.linkedin.com/in/robert-rosa-3abaaa19a" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
         <div class="p4">
             <img src="/photo/PP.jpg" alt="photo Paweł">
             <p class="p4_paragraph">Paweł Politowski</p>
-            <a href="#"><i class="fab fa-facebook-square fa-2x" style="color:#3b5998" target="_blank"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x" style="color: #0E76A8" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-envelope fa-2x" style="color: #607D8B" target="_blank"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-2x" style="color: #607D8B" target="_blank"></i></a>
+            <a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+            <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
     </div>
-
- 
-
     </section>
+
+    <footer>
+        <i class="far fa-envelope fa-2x" style="color: #FFFFFF"> crossroads@gmail.com</i>
+        <div class="footer">&copy; All rights reserved</div>
+    </footer>
 
 
 </body>
