--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navigation">
-        <img src="Pak State.png" class="logo" alt="logo" width="40px">
+        <img src="/src/logo.png" class="logo" alt="logo" width="40px">
         <ul class="position">
             <li class="menu"><a  href="#" class="nav">Home</a></li>
             <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
@@ -140,28 +140,28 @@
     </div>
     <div class="photos">
         <div class="p1">
-            <img src="/photo/PZ.jpg" alt="photo Paulina">
+            <img src="/src/PZ.jpg" alt="photo Paulina">
             <p class="p1_paragraph">Paulina Ziomkowska</p>
             <a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
             <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
             <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
         <div class="p2">
-            <img src="/photo/PK.jpeg" alt="photo Piotr">
+            <img src="/src/PK.jpeg" alt="photo Piotr">
             <p class="p2_paragraph">Piotr Kielak</p>
             <a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
             <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
             <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
         <div class="p3">
-            <img src="/photo/RR.jpeg" alt="photo Robert">
+            <img src="/src/RR.jpeg" alt="photo Robert">
             <p class="p3_paragraph">Robert Rosa</p>
             <a href="https://github.com/Sossna" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
             <a href="https://www.linkedin.com/in/robert-rosa-3abaaa19a" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
             <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
         </div>
         <div class="p4">
-            <img src="/photo/PP.jpg" alt="photo Paweł">
+            <img src="/src/PP.jpg" alt="photo Paweł">
             <p class="p4_paragraph">Paweł Politowski</p>
             <a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
             <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
