--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
     <section id="functionalities">
         <ul class="section__functionalities">
             <li class="ul__functionalities">
-                <i class="fas fa-map-signs fa-border fa-2x"></i>
+                <i class="fas fa-map-signs fa-2x"></i>
                 <div class="description">Planuj</div>
             </li>
             <li class="ul__functionalities">
-                <i class="fas fa-walking fa-border fa-2x"></i>
+                <i class="fas fa-walking fa-2x"></i>
                 <div class="description">Spaceruj</div>
             </li>
             <li class="ul__functionalities">
-                <i class="fas fa-tablet-alt fa-border fa-2x"></i>
+                <i class="fas fa-tablet-alt fa-2x"></i>
                 <div class="description">Obserwuj</div>
             </li>
             <li class="ul__functionalities">
-                <i class="fas fa-keyboard fa-border fa-2x"></i>
+                <i class="fas fa-keyboard fa-2x"></i>
                 <div class="description">Komentuj</div>
             </li>
         </ul>
