bar and text changed

--- a/index.html
+++ b/index.html
@@ -33,31 +33,21 @@
             <div class="hero__top">
 
                 <div class="top__header1">
-                    <h1>PRZECHADZKA</h1>
+                    <h1>crossRoads</h1>
                 </div>
 
 
                  <div class="top__header2">
-                    <h3>Ty wybierasz czas i miejsce</h3>
-                    <p>Podaj informacje o Twojej
-                        lokalizacji oraz czas jakim dysponujesz</p>
+                    <h3>Masz czas ale nie wiesz, gdzie iść?</h3>
+                    <p>
+                        My mamy trasy!
+                    </p>
                 </div>
 
             </div>
 
-             <div class="hero__bottom">
-
-            
-                <div class="bottom__header1">
-                    <h3>My planujemy resztę</h3>
-                    <p>Na podstawie podanych przez Ciebie informacji
-                        aplikacja dobierze trasę, dzięki której możesz cieszyć się relaksującym spacerem
-                    </p>
-
-                </div>
-
-                <div class="bottom__header2">
-                    <h1><a href="index.html#contact-section">Zaplanuj ją już teraz!</a></h1>
+            <div class="bottom__header2">
+                    <h1><a href="index.html#contact-section">Dowiedz się jak chodzić z crossRoads!</a></h1>
                 </div>
 
             </div> <!---->
