--- a/index.html
+++ b/index.html
@@ -124,33 +124,34 @@
         </div>
     </section >
 
-    <section id="about__us">
-    <div class="about__us--heading">
-        <h1>NASZ ZESPÓŁ:</h1>
-    </div>
-    <div class="photos">
-        <div class="p1">
-            <img src="/src/pz.jpg" alt="photo Paulina">
-            <p class="p1_paragraph">Paulina Ziomkowska</p>
-            <a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
-            <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
+    <section id="aboutUs" class="aboutUs">
+        <header class="aboutUs__heading">O nas</header>
+        <div class="aboutUs__bio">
+            <div class="aboutUs__bio1">
+                <img src="/src/pz.jpg" alt="photo Paulina">
+                <p>Paulina</p>
+                <!--<a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+                <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            </div>
+            <div class="aboutUs__bio2">
+                <img src="/src/pk.jpeg" alt="photo Piotr">
+                
+                <!--<a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+                <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            </div>
+            <div class="someCaption">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium voluptatum, adipisci nostrum soluta sunt dolor ab quo nam veritatis magni sit dicta. Dicta ex amet quos atque ad necessitatibus culpa.</p>
+            </div>
+            <div class="aboutUs__bio3">
+                <img src="/src/pp.jpg" alt="photo Paweł">
+                <p>Paweł</p>
+                <!--<a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
+                <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
+                <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            </div>
         </div>
-        <div class="p2">
-            <img src="/src/pk.jpeg" alt="photo Piotr">
-            <p class="p2_paragraph">Piotr Kielak</p>
-            <a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
-            <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
-        </div>
-        <div class="p3">
-            <img src="/src/pp.jpg" alt="photo Paweł">
-            <p class="p3_paragraph">Paweł Politowski</p>
-            <a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
-            <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
-            <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>
-        </div>
-    </div>
     </section>
 
     <footer>
