--- a/index.html
+++ b/index.html
@@ -129,10 +129,17 @@
         <div class="aboutUs__bio">
             <div class="aboutUs__bio1">
                 <img src="/src/pz.jpg" alt="photo Paulina">
-                <p>Paulina</p>
                 <!--<a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
                 <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
                 <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            </div>
+            <div class="aboutUs__caption aboutUs__caption1">
+                <h2>Paulina Ziomkowska</h2>
+                <ul>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                </ul>
             </div>
             <div class="aboutUs__bio2">
                 <img src="/src/pk.jpeg" alt="photo Piotr">
@@ -141,15 +148,27 @@
                 <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
                 <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
             </div>
-            <div class="someCaption">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium voluptatum, adipisci nostrum soluta sunt dolor ab quo nam veritatis magni sit dicta. Dicta ex amet quos atque ad necessitatibus culpa.</p>
+            <div class="aboutUs__caption aboutUs__caption2">
+                <h2>Piotr Kielak</h2>
+                <ul>
+                    <li>Inżynier</li>
+                    <li>Majsterkowicz</li>
+                    <li>Marzyciel</li>
+                </ul>
             </div>
             <div class="aboutUs__bio3">
                 <img src="/src/pp.jpg" alt="photo Paweł">
-                <p>Paweł</p>
                 <!--<a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
                 <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
                 <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            </div>
+            <div class="aboutUs__caption aboutUs__caption3">
+                <h2>Paweł Politowski</h2>
+                <ul>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                    <li>Lorem ipsum</li>
+                </ul>
             </div>
         </div>
     </section>
